--- a/src/UI/buttonNext/ButtonNext.module.scss
+++ b/src/UI/buttonNext/ButtonNext.module.scss
@@ -9,9 +9,14 @@
     transform: rotate(-45deg);
     top: 50%;
     left: 97%;
+    z-index: 1;
 }
 
 .buttonNext:hover {
     cursor: pointer;
     opacity: 0.7;
+}
+
+button:focus {
+    outline: none; 
 }
