--- a/src/components/slider/Slider.module.scss
+++ b/src/components/slider/Slider.module.scss
@@ -1,9 +1,11 @@
 .container-Slider{
     padding: 25px 75px;
+    display: flex;
+    justify-content: center;
 }
 
 .container__inner{
-    width: 100%;
+    max-width: 1750px;
     height: 550px;
     border-radius: 20px;
     display: flex;
@@ -11,10 +13,17 @@
     position: relative;
 }
 
+.slider-content {
+    min-width: 100%;
+    transition: transform 0.8s ease;
+    display: flex;
+}
+
 .description {
     width: 50%;
     height: 100%;
     background-color: #dce5e2;
+    transition: background-color 0.7s ease;  
     display: flex;
     padding: 55px;
     position: relative;
@@ -45,4 +54,39 @@
     height: 100%;
     object-fit: cover;
     object-position: top;
+    flex-shrink: 0;
 }
+
+.button-container{
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 95%;
+    left: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    height: 8px;
+}
+
+button {
+    width: 200px;
+    height: 4px;
+    background-color: black;
+    border: none;
+    margin: 2.5px;
+    transition: background-color 0.8s ease;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+.button::after {
+    content: '';
+    position: absolute;
+    top: -10px;
+    left: -10px;
+    right: -10px;
+    bottom: -10px;
+  }
