--- a/src/main.scss
+++ b/src/main.scss
@@ -23,5 +23,6 @@
     --primary: black;
     --logo-font-size: 30px;
     --logo-font-family: 'Mindcontrol';
-    --link-font-family: 'Inter'
+    --link-font-family: 'Inter';
+    --paddin-slider: 55px;
 }
