--- a/src/components/card/Card.module.scss
+++ b/src/components/card/Card.module.scss
@@ -1,9 +1,57 @@
 .wrapper{
     max-width: 300px;
-    background-color: greenyellow;
+    width: 100%;
+    max-height: 420px;
+    background-color: #282828;
+    padding: 10px;
+    color: white;
 
     input {
         width: 80px;
         height: 30px;
     }
 }
+
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .description {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        h2, h3{
+            font-family: var( --link-font-family);
+        }
+        h2 {
+            width: 200px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+    }
+
+    img{
+        width: 250px;
+        height: 200px;
+    }
+}
+
+.description__buttons{
+
+    input{
+        text-align: center;
+    }
+}
+
+.container__img{
+    width: 250px;
+    height: 250px;
+    overflow: hidden;
+    img {
+        width: 100%;
+        height: 100%;
+    }
+}
+
