--- a/src/components/card/Card.module.scss
+++ b/src/components/card/Card.module.scss
@@ -43,6 +43,11 @@
     input{
         text-align: center;
     }
+    input[type="number"]::-webkit-inner-spin-button, 
+    input[type="number"]::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
 }
 
 .container__img{
