--- a/src/components/card/Card.module.scss
+++ b/src/components/card/Card.module.scss
@@ -2,9 +2,11 @@
     max-width: 300px;
     width: 100%;
     max-height: 420px;
-    background-color: #282828;
+    // background-color: #282828;
+    border: 2px solid #282828;
+    border-radius: 5px;
     padding: 10px;
-    color: white;
+    // color: white;
 
     input {
         width: 80px;
