--- a/src/pages/Page.module.scss
+++ b/src/pages/Page.module.scss
@@ -11,3 +11,15 @@ main {
     justify-content: space-around;
     gap: 20px;
 }
+
+.total {
+    width: 100%;
+    height: 40px;
+    display: flex;
+    justify-content: end;
+    padding: 10px;
+    position: relative;
+    font-family: var(--link-font-family);
+    font-size: 20px;
+    font-weight: bold;
+}
